network fixes and code cleaning